--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     },
     "require-dev": {
         "hautelook/alice-bundle": "^2.9",
+        "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^4.4",
         "symfony/css-selector": "^4.4",
         "symfony/debug-bundle": "^4.4",
