--- a/.env.test
+++ b/.env.test
@@ -5,4 +5,4 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
-DATABASE_URL=mysql://root@127.0.0.1/travis_demo"
+DATABASE_URL=mysql://root@127.0.0.1/travis_demo
