--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ install:
   - php bin/console doctrine:database:create --env=test
   - php bin/console doctrine:schema:update --force --env=test
 
+before_script: phpenv config-add myconfig.ini
+
 script:
   - vendor/bin/phpunit --coverage-clover coverage.xml
 
