Change : Update readme Add coverage test in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,15 @@ install:
   - php bin/console doctrine:database:create --env=test
   - php bin/console doctrine:schema:update --force --env=test
 
-before_script: phpenv config-add myconfig.ini
+before_script: 
+  - phpenv config-add myconfig.ini
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 script:
   - vendor/bin/phpunit --coverage-clover coverage.xml
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
